--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,29 +1,32 @@
 ---
-- name: 'restart sssd'
-  service:
+- name: 'Restart sssd'
+  ansible.builtin.service:
     name: 'sssd'
     state: 'restarted'
 
-- name: 'restart autofs'
-  service:
+- name: 'Restart autofs'
+  ansible.builtin.service:
     name: 'autofs'
     state: 'restarted'
   when: ldap_domain.autofs_searchbase is defined
 
-- name: 'reconfigure debian pam'
-  command: '/usr/sbin/pam-auth-update --force'
+- name: 'Reconfigure debian pam'
+  ansible.builtin.command: '/usr/sbin/pam-auth-update --force'
   environment:
     DEBIAN_FRONTEND: 'noninteractive'
+  changed_when: true
   when: ansible_facts['os_family'] == "Debian"
 
-- name: 'reconfigure redhat pam'
-  command: "/usr/sbin/authconfig \
+- name: 'Reconfigure redhat pam'
+  ansible.builtin.command: "/usr/sbin/authconfig \
     --enablesssd --enablerfc2307bis \
     --enablesssdauth --disableforcelegacy \
     --enablelocauthorize --enablemkhomedir \
     --enablepamaccess --updateall"
+  changed_when: true
   when: ansible_facts['os_family'] == "RedHat"
 
-- name: 'clear sssd cache'
-  command: '/usr/sbin/sss_cache -E'
-  ignore_errors: true
+- name: 'Clear sssd cache'
+  ansible.builtin.command: '/usr/sbin/sss_cache -E'
+  changed_when: true
+  failed_when: false
