--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -8,7 +8,7 @@
       - { name: 'ldapuser', uid: 20041 }
   tasks:
     - name: 'Gather info on useraccounts'
-      user:
+      ansible.builtin.user:
         name: "{{ user.name }}"
         state: 'present'
         create_home: false
@@ -19,18 +19,19 @@
         loop_var: 'user'
 
     - name: 'Assert useraccounts'
-      assert:
+      ansible.builtin.assert:
         that:
           - "'{{ user_info[1]['name'] }}' == '{{ user_info[0]['user']['name'] }}'"
           - "'{{ user_info[1]['uid'] }}' == '{{ user_info[0]['user']['uid'] }}'"
-      loop: "{{ users_info['results']|zip(users)|list }}"
+      loop: "{{ users_info['results'] | zip(users) | list }}"
       loop_control:
         loop_var: 'user_info'
 
     - name: 'Test sudo permissions'
-      shell: sudo -n whoami
+      ansible.builtin.command: sudo -n whoami
       check_mode: false
-      ignore_errors: true
+      failed_when: false
+      changed_when: false
       become: true
       become_user: "{{ user.name }}"
       loop: "{{ users }}"
@@ -39,7 +40,7 @@
       register: 'sudo_results'
 
     - name: 'Assert sudo permissions'
-      assert:
+      ansible.builtin.assert:
         that:
           - "'{{ sudo_result['stdout'] }}' == 'root'"
       loop: "{{ sudo_results['results'] }}"
