--- a/tasks/install-Debian.yml
+++ b/tasks/install-Debian.yml
@@ -1,13 +1,13 @@
 ---
 - name: 'Install packages'
-  apt:
+  ansible.builtin.apt:
     name: "{{ packages }}"
     state: 'present'
     install_recommends: false
     update_cache: true
 
 - name: 'Install autofs packages'
-  apt:
+  ansible.builtin.apt:
     name: "{{ autofs_packages }}"
     state: 'present'
   when:
@@ -15,8 +15,8 @@
     - not ldap_disable_autofs
 
 - name: 'Place PAM config'
-  copy:
+  ansible.builtin.copy:
     src: 'ldaphomedir'
     dest: '/usr/share/pam-configs/ldaphomedir'
-    mode: 0644
-  notify: 'reconfigure debian pam'
+    mode: '0644'
+  notify: 'Reconfigure debian pam'
