--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -11,7 +11,7 @@
       when: ansible_facts['os_family'] == 'Debian'
 
     - name: 'Update YUM cache'
-      ansible.builtin.yum:
+      ansible.builtin.dnf:
         update_cache: true
       when: ansible_facts['os_family'] == 'RedHat'
 
